force-app/main/default/objects/Framework_Forecast_Year__c/Framework_Forecast_Year__c.object-meta.xml
<CustomObject>
    <description>Holds forecast information for relative future years for a given financial year</description>
    <label>Framework Forecast Year</label>
    <nameField>
        <displayFormat>FR{000000}</displayFormat>
        <label>Forecast Year #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Framework Forecast Years</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>