force-app/main/default/objects/Framework_Forecast_Year__c/fields/Acknowledged_Annual__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_Annual__c</fullName>
    <label>Acknowledged Annual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>