force-app/main/default/objects/Framework_Forecast_Year__c/fields/Acknowledged_Data__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_Data__c</fullName>
    <label>Acknowledged Data</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>