force-app/main/default/objects/Framework_Forecast_Year__c/fields/Acknowledged_M01__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_M01__c</fullName>
    <label>Acknowledged M01</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>