force-app/main/default/objects/Framework_Forecast_Year__c/fields/Acknowledged_Q2__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_Q2__c</fullName>
    <label>Acknowledged Q2</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>