force-app/main/default/objects/Framework_Forecast_Year__c/fields/Actual_Forecast_Year__c.field-meta.xml
<CustomField>
    <fullName>Actual_Forecast_Year__c</fullName>
    <formula>&quot;20&quot; + TEXT(Value(MID(Business_Plan_Year__c,3,2)) + Value(RIGHT(TEXT(Relative_Forecast_Year__c),1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Forecast Year</label>
    <type>Text</type>
</CustomField>