force-app/main/default/objects/Framework_Forecast_Year__c/fields/Annual__c.field-meta.xml
<CustomField>
    <fullName>Annual__c</fullName>
    <label>Annual</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>