force-app/main/default/objects/Framework_Forecast_Year__c/fields/Business_Plan_Year__c.field-meta.xml
<CustomField>
    <fullName>Business_Plan_Year__c</fullName>
    <formula>TEXT(Forecast__r.Business_Plan_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Plan Year</label>
    <type>Text</type>
</CustomField>