force-app/main/default/objects/Framework_Forecast_Year__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <label>Forecast #</label>
    <referenceTo>Framework_Forecast__c</referenceTo>
    <relationshipLabel>Framework Forecast Years</relationshipLabel>
    <relationshipName>Framework_Forecast_Years</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>