force-app/main/default/objects/Framework_Forecast_Year__c/fields/Frwork_Sector_Year__c.field-meta.xml
<CustomField>
    <fullName>Frwork_Sector_Year__c</fullName>
    <formula>Forecast__r.Framework__r.Name + 
&apos;-&apos; + 
TEXT(Sector__c) + 
&apos;-&apos; +
TEXT(Relative_Forecast_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frwork-Sector-Year</label>
    <type>Text</type>
</CustomField>