force-app/main/default/objects/Framework_Forecast_Year__c/fields/Last_Acknowledged_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Acknowledged_By__c</fullName>
    <label>Last Acknowledged By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>