force-app/main/default/objects/Framework_Forecast_Year__c/fields/Last_Acknowledged_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Acknowledged_Date__c</fullName>
    <label>Last Acknowledged Date</label>
    <type>DateTime</type>
</CustomField>