force-app/main/default/objects/Framework_Forecast_Year__c/fields/M01__c.field-meta.xml
<CustomField>
    <fullName>M01__c</fullName>
    <label>M01</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>