force-app/main/default/objects/Framework_Forecast_Year__c/fields/M02__c.field-meta.xml
<CustomField>
    <fullName>M02__c</fullName>
    <label>M02</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>