force-app/main/default/objects/Framework_Forecast_Year__c/fields/M03__c.field-meta.xml
<CustomField>
    <fullName>M03__c</fullName>
    <label>M03</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>