force-app/main/default/objects/Framework_Forecast_Year__c/fields/Q1__c.field-meta.xml
<CustomField>
    <fullName>Q1__c</fullName>
    <label>Q1</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>