force-app/main/default/objects/Framework_Forecast_Year__c/fields/Q2__c.field-meta.xml
<CustomField>
    <fullName>Q2__c</fullName>
    <label>Q2</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>