force-app/main/default/objects/Framework_Forecast_Year__c/fields/Q3__c.field-meta.xml
<CustomField>
    <fullName>Q3__c</fullName>
    <label>Q3</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>