force-app/main/default/objects/Framework_Forecast_Year__c/fields/Relative_Forecast_Year__c.field-meta.xml
<CustomField>
    <fullName>Relative_Forecast_Year__c</fullName>
    <label>Relative Forecast Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Year 0</fullName>
            </value>
            <value>
                <fullName>Year 1</fullName>
            </value>
            <value>
                <fullName>Year 2</fullName>
            </value>
            <value>
                <fullName>Year 3</fullName>
            </value>
            <value>
                <fullName>Year 4</fullName>
            </value>
            <value>
                <fullName>Year 5</fullName>
                <isActive>false</isActive>
                <label>Year 5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>