force-app/main/default/objects/Framework_Forecast_Year__c/fields/Relative_Year_Plus_Actual__c.field-meta.xml
<CustomField>
    <fullName>Relative_Year_Plus_Actual__c</fullName>
    <label>Relative_Year_Plus_Actual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>