force-app/main/default/objects/Framework_Forecast_Year__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CG</fullName>
            </value>
            <value>
                <fullName>WPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>