force-app/main/default/objects/Framework_Forecast_Year__c/recordTypes/Actual.recordType-meta.xml
<RecordType>
    <fullName>Actual</fullName>
    <active>true</active>
    <label>Actual</label>
</RecordType>