force-app/main/default/objects/Framework_Forecast_Year__c/recordTypes/Live.recordType-meta.xml
<RecordType>
    <fullName>Live</fullName>
    <active>true</active>
    <label>Live</label>
</RecordType>