force-app/main/default/objects/Framework_Forecast_Year__c/recordTypes/Snapshot.recordType-meta.xml
<RecordType>
    <fullName>Snapshot</fullName>
    <active>false</active>
    <label>Snapshot</label>
</RecordType>